--- a/p002-memoria.html
+++ b/p002-memoria.html
@@ -11,28 +11,10 @@
 
 <body>
     <header>
-        <h1>2x2 cartes - DEMO</h1>
+        <h1 id="capcalera"></h1>
     </header>
 
-    <div id="tauler">
-        <div class="carta" id="f1c1">
-            <div class="cara darrera"></div>
-            <div class="cara davant"></div>
-        </div>
-        <div class="carta" id="f1c2">
-            <div class="cara darrera"></div>
-            <div class="cara davant"></div>
-        </div>
-        <div class="carta" id="f2c1">
-            <div class="cara darrera"></div>
-            <div class="cara davant"></div>
-        </div>
-        <div class="carta" id="f2c2">
-            <div class="cara darrera"></div>
-            <div class="cara davant"></div>
-        </div>
-
-    </div>
+    <div id="tauler"></div>
 
     <footer>
         <p>Fes clic en una carta per donar-li la volta</p>
