--- a/p002-memoria.html
+++ b/p002-memoria.html
@@ -11,13 +11,18 @@
 
 <body>
     <header>
-        <h1 id="capcalera"> </h1>
+        <h1 id="capcalera">Memory</h1>
     </header>
 
-    <div id="tauler"> </div>
+    <div id="tauler" class="joc"> </div>
+
+    <div class="menu prejoc">
+        <input type="number" min="2" max="20" placeholder="Columnes..." id="cols" required> <input type="number" min="2" max="20" placeholder="Files..." id="fils" required>
+        <button class="jugar">Jugar</button>
+    </div>
 
     <footer>
-        <p>Fes clic en una carta per donar-li la volta</p>
+        <p class="joc">Fes clic en una carta per donar-li la volta</p>
     </footer>
 </body>
 
